# aws-solutions-architect-bench

./: .env.example  .gitignore  AGENTS.md  BENCH.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/agents/: code-reviewer.md  debugger.md  docs-writer.md  orchestrator.md  refactorer.md  security-auditor.md  test-architect.md
.claude/commands/: add-tests.md  architect.md  code-simplifier.md  commit-push-pr.md  commit.md  create-epics.md  create-tasks.md  lint-check.md  lint-fix.md  mentor.md  quick-fix.md  rapid.md  review.md  run-tests.md  security-scan.md  summarize-changes.md  sync-branch.md  validate-build.md  verify-changes.md
.claude/hooks/: hooks.json
.github/workflows/: bench.yaml
demo/: theory.py
docs/: ARCHITECTURE_SCORING.md  CDK_FAILURE_MODES.md  CDK_PROMPT_CONTRACT.md  LAUNCH_POST.md  SCORING.md  SOCIAL_POSTS.md  STRUCTURED_OUTPUTS.md  index.html  leaderboard.json
evals/architecture_design/: architecture_interpretation.jsonl  diagram_validators.py  judge_prompts.py  tasks.py
evals/cdk_synth/: Dockerfile  README.md  cdk_synth.jsonl  tasks.py  (+1 more)
schemas/: leaderboard.schema.json
scripts/: aggregate_inspect.py  aggregate_multi.py  archdiagram_pydantic.py  archdiagram_pydantic_e2b.py  bundle_logs.sh  cdk_eval_example.json  generate_arch_items.py  generate_cdk_items.py  generate_mcq_items.py  measure_judge_agreement.py  task_registry.py
strategy/: EPICS.md  OKRs.md  VISION.md
tests/: __init__.py  conftest.py  test_aggregate_multi.py  test_cdk_code_extraction.py  test_diagram_validators.py  test_llm_judge_scorer.py  test_task_registry.py
(+93 files in other folders)
