[project]
name = "aws-solutions-architect-bench"
version = "0.1.0"
description = "A comprehensive evaluation framework for testing AI model performance on real-world AWS Solutions Architect tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.56.0",
    "diagrams>=0.23.4",
    "e2b-code-interpreter>=2.3.0",
    "inspect-ai>=0.3.111",
    "jsonschema>=4.0.0",
    "langfuse>=3.10.0",
    "openai>=1.93.0",
    "pandas>=2.3.2",
    "pillow>=11.0.0",
    "pydantic-ai>=1.18.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
]
